fix: view-mode bg color in light/dark mode

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -38,6 +38,7 @@
     /* Layout */
     --border-radius: 4px;
     --thumb-width: 250px;
+	--lightbox-view-mode-bg: rgba(18, 18, 18, 0.7);
 }
 
 /* --- Light Theme Variable Overrides --- */
@@ -51,6 +52,7 @@ html[data-theme="light"] {
     --color-text-secondary: #616161;
     --color-border: #bdbdbd;
 	--color-warning: #f25b01;
+	--lightbox-view-mode-bg: rgba(224, 224, 224, 0.7);
 }
 
 body {
@@ -515,7 +517,7 @@ form.search-form button:hover { background-color: var(--color-accent-hover); }
     width: 350px;
     display: flex;
     flex-direction: column;
-    background: rgba(18, 18, 18, 0.85);
+    background: var(--lightbox-view-mode-bg);
     border: 1px solid var(--color-border);
     border-radius: var(--border-radius);
     padding: 1rem;
